# gcmd

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  pyproject.toml
gcmd/: auth.py  cli.py  client.py  download.py  list.py  sheets.py  tasks.py  utils.py
gdrive_utils/: auth.py  cli.py  comments.py  docs.py  download.py  utils.py
