[project]
name = "gcmd"
version = "0.3.0"
description = "Command-line utilities for Google services (Drive, Docs, Sheets, and more)"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [
  { name = "Shane McDonald", email = "me@shanemcd.com" }
]
keywords = ["google", "drive", "docs", "sheets", "cli", "utils"]
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
]
dependencies = [
  "google-auth>=2.0.0",
  "google-auth-oauthlib>=1.0.0",
  "google-auth-httplib2>=0.1.0",
  "google-api-python-client>=2.0.0",
  "pypandoc>=1.11",
]

[project.urls]
Homepage = "https://github.com/shanemcd/gcmd"
Repository = "https://github.com/shanemcd/gcmd"

[project.scripts]
gcmd = "gcmd.cli:main"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "."}

[tool.setuptools.packages.find]
where = ["."]
include = ["gcmd*"]
exclude = ["tests*"]

